--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <html>
     <head>
-        <title>Marshall Hillman La Vain Website</title>
+        <title>Mars The Wolf</title>
     </head>
     <body>
-        <h1>Hello World.</h1>
+        <div id =title>
+            <h1>Welcome.</h1>
+        </div>
+        <h2><strong>Please mind the sparcity.</strong></h2>
+        <br>
+        <div id =body>
+            <p> This is a work in progress that I hope will translate into a nice vanity page. During the interm there won't be much to show but as I learn more skills I'll be sure to add more content. 
+            <br>
+        Some of the things I hope to include are as follows;
+                <ul>
+                    <li>A DnD character generator.<li>
+                    <li>An application to compute various rates of return for investments.</li>
+                    <li>A html parser that takes a single html and generates several files from it</il>
+                </ul>
+            <br>
+            I don't really know how to do any of these and feedback critiques are strongly welcomed.   
+            </p>
+        </div>       
     </body>
 </html>
